# hackthebot

./: CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: ci.yml  release.yml
graphql/: GetChallengeById.graphql  GetChallengeByName.graphql  GetSolvesForUserWithName.graphql  GetUsersWhoSolvedChallenge.graphql  InsertChallenge.graphql  InsertSolveForUser.graphql  IsChallengeSolvedForUser.graphql  schema.graphql
migrations/: config.yaml
migrations/metadata/databases/default/tables/: htb_challenges.yaml  htb_solves.yaml  tables.yaml
migrations/migrations/default/1639653845472_0.1.0/: up.sql
src/: commands.rs  discord_utils.rs  lib.rs  main.rs  tasks.rs
src/graphql/: graphql_provider.rs  graphql_types.rs  mod.rs
src/hasura/: hasura_provider.rs  mod.rs
src/htb/: api.rs  api_types.rs  mod.rs
