[package]
name = "hackthebot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
anyhow = "1.0.51"
futures = "0.3.17"
async-trait = "0.1"
chrono = "0.4"
once_cell = "1.8"
dashmap = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
base64 = "0.13.0"
graphql_client = { version = "0.10.0", features = ["reqwest"] }
tokio = { version = "1", features = ["full"] }
clokwerk = "0.3.5"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
    "cache",
]
