[package]
name = "hackthebot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
once_cell = "1"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
base64 = "0.13"
graphql_client = { version = "0.11", features = ["reqwest"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
async-mutex = "1.4.0"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
    "cache",
]
