[package]
name = "hackthebot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
once_cell = "1"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
async-mutex = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
]
